[gd_scene load_steps=2 format=3 uid="uid://b5j8hjg4n2o8w"]

[ext_resource type="Script" path="res://scripts/popups/PlayerSelectionPopup.gd" id="1_h7r8q"]

[node name="PlayerSelectionPopup" type="AcceptDialog"]
title = "Seleccionar Jugador"
size = Vector2i(600, 400)
script = ExtResource("1_h7r8q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 36.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Selecciona un jugador para aplicar la mejora:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
